0.6.6/_sources/gallery/add_labels.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/add_labels.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_add_labels.py>`
        to download the full example as a Python script or as a
        Jupyter notebook.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_add_labels.py:


Add labels
==========

Display a labels layer above of an image layer using the ``add_labels`` and
``add_image`` APIs

.. tags:: layers, visualization-basic

.. GENERATED FROM PYTHON SOURCE LINES 10-39



.. image-sg:: /gallery/images/sphx_glr_add_labels_001.png
   :alt: add labels
   :srcset: /gallery/images/sphx_glr_add_labels_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/napari/examples/add_labels.py:22: FutureWarning: `square` is deprecated since version 0.25 and will be removed in version 0.27. Use `skimage.morphology.footprint_rectangle` instead.
      bw = closing(image > thresh, square(4))






|

.. code-block:: Python

    from skimage import data
    from skimage.filters import threshold_otsu
    from skimage.measure import label
    from skimage.morphology import closing, remove_small_objects, square
    from skimage.segmentation import clear_border

    import napari

    image = data.coins()[50:-50, 50:-50]

    # apply threshold
    thresh = threshold_otsu(image)
    bw = closing(image > thresh, square(4))

    # remove artifacts connected to image border
    cleared = remove_small_objects(clear_border(bw), 20)

    # label image regions
    label_image = label(cleared).astype('uint8')

    # initialise viewer with coins image
    viewer = napari.Viewer()
    layer = viewer.add_image(image, name='coins', rgb=False)

    # add the labels
    label_layer = viewer.add_labels(label_image, name='segmentation')

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_add_labels.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: add_labels.ipynb <add_labels.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: add_labels.py <add_labels.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: add_labels.zip <add_labels.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
